# ai-trading-system

./: .env.backup.continuous.20251004_233131  .env.build  .env.example  .env.production  .env.production.example  .env.production.template  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_BUILD_REVIEW.md  COMPREHENSIVE_DATA_REPORT.md  CONFIGURATION.md  CRITICAL_FIXES_BEFORE_LIVE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PRODUCTION_GUIDE.md  DEPLOYMENT_READY_CHECKLIST.md  DEPLOYMENT_REQUIREMENTS.md  Dockerfile  FINAL_STATUS_REPORT.md  MULTI_FREQUENCY_DATA_SYSTEM.md  Makefile  NON_GOALS.md  PHASE_7_TESTING_SUMMARY.md  PHASE_8_READINESS_SUMMARY.md  POST_DEPLOYMENT_ACTION_PLAN.md  PREFLIGHT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_STATUS.md  QUICK_COMMANDS.md  README.md  README_ML_OPERATIONS.md  RESUME_INSTRUCTIONS.md  SYSTEM_STATUS_REPORT.md  WATCHLIST_MANAGEMENT.md  alembic.ini  (+18 more)
.github/workflows/: options-coverage-report.yml  quality-gate.yml  security-scan.yml  shellcheck.yml
Claude-Code-Context/: BUILD_STATUS.md  CURRENT_PHASE.md  CURRENT_STATUS.md  DEPENDENCIES.md  ENHANCED_MODEL_ARCHITECTURE.md  LOCAL_FIRST_AI_ARCHITECTURE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
api/: Dockerfile  OPERATIONS_DASHBOARDS.md  README_DASHBOARDS.md  audit_middleware.py  auth.py  cache_utils.py  compliance_endpoints.py  coverage_utils.py  main.py  main_fixed.py  main_original_backup.py  metrics.py  models.py  rate_limiter.py  resilience_endpoints.py  websocket_auth.py  websocket_manager.py
api/routers/: admin_dashboard.py  admin_god_mode.py  auth.py  business_dashboard.py  dashboard_data.py  governor.py  market_data.py  market_data_integration.py  ml_management.py  ml_models.py  ml_proxy.py  portfolio.py  realtime_intelligence.py  system.py  trading.py  vector_health.py  websocket.py
api/static/: admin.html  admin_control_panel.html
api/templates/: base.html
api/tests/: test_admin_backfill_and_drift.py  test_auth_health.py  test_contract_endpoints.py  test_coverage_degraded_paths.py  (+5 more)
archive_cleanup_20251004_171834/: BACKTESTING_SYSTEM_DOCUMENTATION.md  CLEANUP_ANALYSIS_REPORT.md  ELITE_STRATEGIES_DOCUMENTATION.md  PRODUCTION_READY_STATUS.md  SESSION_SUMMARY_OCT4.md  SYSTEM_REVIEW_COMPLETE.md  test_all_strategies.sh  test_backtesting_system.sh
config/: logging.yaml  ml_promotion_policy.yaml  postgresql.conf  safe_trading_config.yaml  secure_config.py
data_markers/: last_eod_success
docs/: ANALYZER_NOISE.md  CONFIGURATION_MIGRATION_GUIDE.md  CONTINUOUS_LEARNING.md  DEVELOPMENT_SETUP.md  PhD_Intelligence_User_Guide.md  RESILIENCE_PATTERNS.md  kubernetes-health-checks.md
infrastructure/: alertmanager.yml
migrations/: create_training_tables.sql  env.py
research/: advanced_intelligence_research.md  phd_level_implementation_summary.md
scripts/: README_OPERATIONS_SCRIPTS.md  access_dashboards.sh  activate_continuous_processing.sh  automated_backup.sh  automated_recovery.sh  automated_watchlist_update.sh  backfill_driver.py  backup.service  backup.timer  backup_restore_system.py  backup_system.py  bootstrap_postgres_indexes.py  bootstrap_questdb_tables.py  check_backfill_status_all.sh  check_data_coverage.sh  check_ml_trading_status.sh  cleanup_artifacts.py  cleanup_duplicate_scripts.sh  cleanup_duplicates.sh  cleanup_production.sh  cleanup_project.sh  cleanup_root_production.sh  cleanup_scripts_production.sh  complete_system_check.sh  comprehensive_data_collection_status.sh  comprehensive_fix.sh  comprehensive_health_check.sh  configure_domain.sh  create_user_tables.py  deploy-production-ready.sh  disaster_recovery.py  docker_hygiene.sh  emit_deployment_event.py  enable_postgres_encryption.sh  enforce_retention.py  enforce_retention_questdb.py  eod_pipeline.sh  fill_gaps.py  final_production_status.sh  final_system_status.sh  (+48 more)
services/: __init__.py  broker_integration  indicator_engine  news_integration  risk_monitor
shared/: logging_config.py
shared/python-common/: README.md  observability.py  pyproject.toml  setup.py
shared/python-common/trading_common/: __init__.py  ai_models.py  api_clients.py  audit_logger.py  audit_trail.py  backtesting.py  backup_manager.py  cache.py  config.py  data_sources.py  database_manager.py  drift_detection.py  drift_scheduler.py  event_logging.py  exceptions.py  experiment_tracking.py  feature_graph.py  feature_store.py  http_client.py  ingestion.py  local_swarm.py  local_swarm.py.bak.20250829  logging.py  messaging.py  metrics.py  ml_pipeline.py  ml_registry.py  model_registry.py  models.py  promotion_policy.py  registry_utils.py  resilience.py  resilience_monitor.py  risk_limits.py  secure_config.py  security_store.py  security_validator.py  slo_monitoring.py  tracing.py  trading_agents.py  (+4 more)
shared/python-common/trading_common/database/: __init__.py  redis_client.py
shared/python-common/trading_common/services/: data_source_manager.py
shared/rust-common/: Cargo.toml
shared/rust-common/src/: config.rs  database.rs  errors.rs  lib.rs  logging.rs  metrics.rs  redis.rs  security.rs  types.rs  utils.rs
shared/rust-common/src/database/: postgres.rs
tests/: conftest.py  conftest_full.py  test_auth_me.py  test_business_kpis_report.py  test_database_performance.py  test_drift_scheduler_minimal.py  test_event_logging_basic.py  test_experiment_tracking_minimal.py  test_generate_sbom_minimal.py  test_minio_storage_scaffold.py  test_multi_frequency_system.py  test_rate_limiter_degraded.py  test_repro_manifest.py  test_services.py  test_storage_vector_instrumentation.py  test_weaviate_schema_diff.py
tools/: README.md  duplicate_archive_plan.json  duplicate_archive_plan.sh  duplicate_scan.sh  generate-secrets.py  migrations.py  scan_duplicates.py  test_indicator_analysis.json
trading_common/: drift_scheduler.py  experiment_tracking.py  feature_store.py  model_registry.py  resilience.py  security_store.py  security_validator.py  settings.py
(+285 files in other folders)
