[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-common"
version = "1.0.0-dev"
description = "Shared Python libraries for AI trading system"
authors = [
    {name = "Nilante Dev", email = "admin@main-nilante.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "python-jose[cryptography]>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_common*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88