[package]
name = "trading-common"
version = "1.0.0-dev"
edition = "2021"
authors = ["Nilante Dev <admin@main-nilante.com>"]
license = "MIT"
description = "Shared Rust libraries for AI trading system"
repository = "https://github.com/nilantedev/ai-trading-system"
keywords = ["trading", "finance", "ai", "high-frequency"]
categories = ["finance"]

[features]
default = ["tokio-runtime", "metrics", "serialization"]
tokio-runtime = ["tokio/rt-multi-thread", "tokio/macros"]
redis = ["dep:redis"]
metrics = ["dep:prometheus", "dep:metrics"]
serialization = ["dep:bincode"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# HTTP and networking
axum = "0.7"
hyper = "1.0"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "1.3", optional = true }

# Database clients
redis = { version = "0.24", features = ["aio", "tokio-comp"], optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Configuration and logging
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = "0.13"

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Concurrency and async utilities
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"

# Performance and math
rayon = "1.8"
num-traits = "0.2"
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
mockall = "0.12"

[lib]
name = "trading_common"
crate-type = ["lib"]

# Benchmarks (optional)
# [[bench]]
# name = "benchmarks"
# harness = false

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
lto = "thin"